envs/idp/arch.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  template:
    spec:
      serviceAccountName: wazuh
      nodeSelector:
        kubernetes.io/arch: amd64

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-indexer
  namespace: wazuh
spec:
  template:
    spec:
      serviceAccountName: wazuh
      nodeSelector:
        kubernetes.io/arch: amd64

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager-master
  namespace: wazuh
spec:
  template:
    spec:
      serviceAccountName: wazuh
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: wazuh-filebeat
          configMap:
            name: wazuh-filebeat
        - name: wazuh-local-internal-options
          configMap:
            name: wazuh-local-internal-options
      containers:
        - name: wazuh-manager
          volumeMounts:
            - name: wazuh-filebeat
              mountPath: /etc/filebeat/filebeat.yml
              subPath: filebeat.yml
              readOnly: true
            - name: wazuh-local-internal-options
              mountPath: /var/ossec/etc/local_internal_options.conf
              subPath: local_internal_options.conf
              readOnly: true

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager-worker
  namespace: wazuh
spec:
  template:
    spec:
      serviceAccountName: wazuh
      nodeSelector:
        kubernetes.io/arch: amd64
      volumes:
        - name: wazuh-filebeat
          configMap:
            name: wazuh-filebeat
      containers:
        - name: wazuh-manager
          volumeMounts:
            - name: wazuh-filebeat
              mountPath: /etc/filebeat/filebeat.yml
              subPath: filebeat.yml
              readOnly: true
