envs/idp/svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  labels:
    dns: route53
#  annotations:
#    domainName: 'wazuh-dashboard.ivas-idp.de'
#    external-dns.alpha.kubernetes.io/hostname: "wazuh-dashboard.ivas-idp.de"
#    service.beta.kubernetes.io/aws-load-balancer-alpn-policy: None
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
#    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
#    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
#    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:943239102098:certificate/d305d04c-59bc-4728-991d-86e8629c7b6a
#
#    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-TLS13-1-0-2021-06
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: '443'
#    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: proxy_protocol_v2.enabled=true,deregistration_delay.timeout_seconds=120,deregistration_delay.connection_termination.enabled=true
#    service.beta.kubernetes.io/aws-load-balancer-type: nlb

#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
#spec:
#  type: ClusterIP
#  ports:
#    - name: dashboard
#      port: 443
#      targetPort: 5601
