envs/idp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard
  namespace: wazuh
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    ingress.nginx.kubernetes.io/enable-cors: "true"
#    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    "alb.ingress.kubernetes.io/load-balancer-name": "k8s-wazuh-dashboar-b50cf6a98d"
#    alb.ingress.kubernetes.io/scheme: internal
spec:
#  ingressClassName: alb
  rules:
    - host: wazuh.ivas-idp.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 443
